--- a/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
     </div>
     <div class="container-fluid default-dash">
         <div class="row">
-            <div class="col-12 col-sm-6">
+            <div class="col-12">
                 <div class="card profile-greeting">
                     <div class="card-body">
                         <div class="media">
@@ -39,7 +39,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="cartoon-img"><img class="img-fluid" src="~/Dashboard/assets/images/images.svg" alt=""></div>
+                        <div class="cartoon-img"><img class="img-fluid" src="~/Dashboard/assets/images/images.svg" alt="" style="height:173px!Important"></div>
                     </div>
                 </div>
             </div>
