--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -43,7 +43,14 @@
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.4/dist/sweetalert2.min.css" rel="stylesheet">
     <style>
         .page-wrapper.compact-wrapper .page-body-wrapper div.sidebar-wrapper .logo-wrapper, .page-wrapper.compact-wrapper .page-body-wrapper div.sidebar-wrapper .logo-icon-wrapper {
-            padding: 3px 30px!important;
+            padding: 3px 30px !important;
+        }
+
+        .profile-greeting {
+            position: relative !important;
+            background-color: var(--theme-deafult) !important;
+            color: #fff !important;
+            height: 154px !important;
         }
     </style>
 </head>
@@ -327,7 +334,7 @@
                             <div class="sidebar-img-section">
                                 <div class="sidebar-img-content">
                                     <img class="img-fluid" src="../assets/images/side-bar.png" alt="">
-                                    <h4>Need Help ?</h4><a class="txt" href="https://pixelstrap.freshdesk.com/support/home">Raise ticket at "support@pixelstrap.com"</a><a class="btn btn-secondary" href="https://themeforest.net/user/pixelstrap/portfolio">Buy Now</a>
+                                    <h4>Feed Back</h4><a class="txt" href="#">Feedback is the breakfast of champions."</a><a class="btn btn-secondary" href="#">Give Feedback</a>
                                 </div>
                             </div>
                         </div>
@@ -375,7 +382,7 @@
     <script src="~/Dashboard/assets/js/chart/apex-chart/stock-prices.js"></script>
     <script src="~/Dashboard/assets/js/notify/bootstrap-notify.min.js"></script>
     <script src="~/Dashboard/assets/js/dashboard/default.js"></script>
-    <script src="~/Dashboard/assets/js/notify/index.js"></script>
+@*     <script src="~/Dashboard/assets/js/notify/index.js"></script> *@
     <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.js"></script>
     <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.en.js"></script>
     <script src="~/Dashboard/assets/js/datepicker/date-picker/datepicker.custom.js"></script>
