--- a/PMS-PropertyHapa/Views/Auth/Login.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/Login.cshtml
@@ -29,6 +29,9 @@
                             if (response.result.organizationLogo) {
                                 localStorage.setItem('organizationLogo', response.result.organizationLogo);
                             }
+                            if (response.result.organizationIcon) {
+                                localStorage.setItem('organizationIcon', response.result.organizationIcon);
+                            }
                             if (response.result.primaryColor) {
                                 localStorage.setItem('primaryColor', response.result.primaryColor);
                             }
