--- a/PMS-PropertyHapa/Views/Tenant/AddTenant.cshtml
+++ b/PMS-PropertyHapa/Views/Tenant/AddTenant.cshtml
@@ -8,127 +8,148 @@
 <div class="page-body">
     <h2>@(Model.TenantId == null ? "Add" : "Edit") Tenant</h2>
 
-    <div id="tenantForm">
+    <form id="tenantForm">
         <input type="hidden" id="TenantId" name="TenantId" value="@Model.TenantId" />
-        <div class="col-sm-6 col-md-3">
-            <div class="mb-3">
-                <label for="FirstName">First Name</label>
-                <input type="text" class="form-control" id="FirstName" name="FirstName" value="@Model.FirstName" required />
+
+        <!-- Tenant Information Section -->
+        <div class="section">
+            <h3>Tenant Information</h3>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="mb-3">
+                        <label for="FirstName">First Name</label>
+                        <input type="text" class="form-control" id="FirstName" name="FirstName" value="@Model.FirstName" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="LastName">Last Name</label>
+                        <input type="text" class="form-control" id="LastName" name="LastName" value="@Model.LastName" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="EmailAddress">Email</label>
+                        <input type="email" class="form-control" id="EmailAddress" name="EmailAddress" value="@Model.EmailAddress" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="PhoneNumber">Phone Number</label>
+                        <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" value="@Model.PhoneNumber" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="Gender">Gender</label>
+                        <select class="form-control" id="Gender" name="Gender" required>
+                            <option value="">Select Gender</option>
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                            <option value="Other">Other</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="DOB">Date of Birth</label>
+                        <input type="date" class="form-control" id="DOB" name="DOB" value="@Model.DOB" required/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="EmergencyContactInfo">Emergency Contact Info</label>
+                        <input type="text" class="form-control" id="EmergencyContactInfo" name="EmergencyContactInfo" value="@Model.EmergencyContactInfo" required/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="TenantNationality">Tenant Nationality</label>
+                        <input type="text" class="form-control" id="TenantNationality" name="TenantNationality" value="@Model.TenantNationality" required/>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="mb-3">
-                <label for="LastName">Last Name</label>
-                <input type="text" class="form-control" id="LastName" name="LastName" value="@Model.LastName" required />
+
+        <!-- Address Information Section -->
+        <div class="section">
+            <h3>Address Information</h3>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="mb-3">
+                        <label for="Address">Address</label>
+                        <input type="text" class="form-control" id="Address" name="Address" value="@Model.Address" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="Address2">Address 2</label>
+                        <input type="text" class="form-control" id="Address2" name="Address2" value="@Model.Address2" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="Locality">Locality</label>
+                        <input type="text" class="form-control" id="Locality" name="Locality" value="@Model.Locality" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="Region">Region</label>
+                        <input type="text" class="form-control" id="Region" name="Region" value="@Model.Region" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="PostalCode">Postal Code</label>
+                        <input type="text" class="form-control" id="PostalCode" name="PostalCode" value="@Model.PostalCode" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="Country">Country</label>
+                        <select class="form-control" id="Country" name="Country">
+                            <option value="">Select Country</option>
+                            <option value="Germany">Germany</option>
+                            <option value="Canada">Canada</option>
+                            <option value="USA">USA</option>
+                            <option value="Australia">Australia</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="CountryCode">Country Code</label>
+                        <input type="text" class="form-control" id="CountryCode" name="CountryCode" value="@Model.CountryCode" />
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="mb-3">
-                <label for="EmailAddress">Email</label>
-                <input type="email" class="form-control" id="EmailAddress" name="EmailAddress" value="@Model.EmailAddress" required />
+
+        <!-- Billing Information Section -->
+        <div class="section">
+            <h3>Billing Information</h3>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="mb-3">
+                        <label for="Account_Name">Account Name</label>
+                        <input type="text" class="form-control" id="Account_Name" name="Account_Name" value="@Model.Account_Name" required/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Account_Holder">Account Holder</label>
+                        <input type="text" class="form-control" id="Account_Holder" name="Account_Holder" value="@Model.Account_Holder" required/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Account_IBAN">Account IBAN</label>
+                        <input type="text" class="form-control" id="Account_IBAN" name="Account_IBAN" value="@Model.Account_IBAN" required/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Account_Swift">Account SWIFT/BIC</label>
+                        <input type="text" class="form-control" id="Account_Swift" name="Account_Swift" value="@Model.Account_Swift" required/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Account_Bank">Account Bank</label>
+                        <input type="text" class="form-control" id="Account_Bank" name="Account_Bank" value="@Model.Account_Bank" required/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="Account_Currency">Account Currency</label>
+                        <input type="text" class="form-control" id="Account_Currency" name="Account_Currency" value="@Model.Account_Currency" required/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="VAT">VAT Number</label>
+                        <input type="text" class="form-control" id="VAT" name="VAT" value="@Model.VAT" required/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="LegalName">Legal Name</label>
+                        <input type="text" class="form-control" id="LegalName" name="LegalName" value="@Model.LegalName" required/>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="mb-3">
-                <label for="PhoneNumber">Phone Number</label>
-                <input type="number" class="form-control" id="PhoneNumber" name="PhoneNumber" value="@Model.PhoneNumber" required />
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="mb-3">
-                <label for="EmergencyContactInfo">Emergency Contact Info</label>
-                <input type="text" class="form-control" id="EmergencyContactInfo" name="EmergencyContactInfo" value="@Model.EmergencyContactInfo" />
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-    <div class="mb-3">
-        <label for="TenantNationality">Tenant Nationality</label>
-        <input type="text" class="form-control" id="TenantNationality" name="TenantNationality" value="@Model.TenantNationality" />
-    </div>
-</div>
 
-        <div class="col-sm-6 col-md-3">
-            <div class="mb-3">
-                <label for="Gender">Gender</label>
-                <select class="form-control" id="Gender" name="Gender">
-                    <option value="">Select Gender</option>
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
-                    <option value="Other">Other</option>
-                </select>
-            </div>
-        </div>
-
-
-
-<div class="col-sm-6 col-md-3">
-    <div class="mb-3">
-        <label for="DOB">Date of Birth</label>
-        <input type="date" class="form-control" id="DOB" name="DOB" value="@Model.DOB" />
-    </div>
-</div>
-
-<div class="col-sm-6 col-md-3">
-    <div class="mb-3">
-        <label for="VAT">VAT Number</label>
-        <input type="text" class="form-control" id="VAT" name="VAT" value="@Model.VAT" />
-    </div>
-</div>
-
-<div class="col-sm-6 col-md-3">
-    <div class="mb-3">
-        <label for="LegalName">Legal Name</label>
-        <input type="text" class="form-control" id="LegalName" name="LegalName" value="@Model.LegalName" />
-    </div>
-</div>
-
-<div class="col-sm-6 col-md-3">
-    <div class="mb-3">
-        <label for="Account_Name">Account Name</label>
-        <input type="text" class="form-control" id="Account_Name" name="Account_Name" value="@Model.Account_Name" />
-    </div>
-</div>
-
-<div class="col-sm-6 col-md-3">
-    <div class="mb-3">
-        <label for="Account_Holder">Account Holder</label>
-        <input type="text" class="form-control" id="Account_Holder" name="Account_Holder" value="@Model.Account_Holder" />
-    </div>
-</div>
-
-<div class="col-sm-6 col-md-3">
-    <div class="mb-3">
-        <label for="Account_IBAN">Account IBAN</label>
-        <input type="text" class="form-control" id="Account_IBAN" name="Account_IBAN" value="@Model.Account_IBAN" />
-    </div>
-</div>
-
-<div class="col-sm-6 col-md-3">
-    <div class="mb-3">
-        <label for="Account_Swift">Account SWIFT/BIC</label>
-        <input type="text" class="form-control" id="Account_Swift" name="Account_Swift" value="@Model.Account_Swift" />
-    </div>
-</div>
-
-<div class="col-sm-6 col-md-3">
-    <div class="mb-3">
-        <label for="Account_Bank">Account Bank</label>
-        <input type="text" class="form-control" id="Account_Bank" name="Account_Bank" value="@Model.Account_Bank" />
-    </div>
-</div>
-
-<div class="col-sm-6 col-md-3">
-    <div class="mb-3">
-        <label for="Account_Currency">Account Currency</label>
-        <input type="text" class="form-control" id="Account_Currency" name="Account_Currency" value="@Model.Account_Currency" />
-    </div>
-</div>
-     
-        <div>
+        <div class="text-center">
             <button type="button" class="btn btn-primary" onclick="submitTenantForm()">@(Model.TenantId == null ? "Add" : "Edit") Tenant</button>
         </div>
-    </div>
+    </form>
 </div>
+
+
+
+
 
 <script>
     function stringToGuid(str) {
@@ -139,6 +160,47 @@
         var userId = localStorage.getItem('userId');
 
         var appTenantId = stringToGuid(userId);
+
+        // Validation flag
+        var isValid = true;
+
+        // List of required fields
+        var requiredFields = [
+            '#FirstName',
+            '#LastName',
+            '#EmailAddress',
+            '#PhoneNumber',
+            '#Gender',
+            '#DOB',
+            '#EmergencyContactInfo',
+            '#TenantNationality',
+            '#Account_Name',
+            '#Account_Holder',
+            '#Account_IBAN',
+            '#Account_Swift',
+            '#Account_Bank',
+            '#Account_Currency',
+            '#VAT',
+            '#LegalName'
+           
+        ];
+
+        requiredFields.forEach(function (fieldId) {
+            var fieldValue = $(fieldId).val().trim();
+            if (!fieldValue) {
+                isValid = false;
+             
+                $(fieldId).addClass('is-invalid'); 
+            } else {
+                $(fieldId).removeClass('is-invalid');
+            }
+        });
+
+        if (!isValid) {
+            var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
+            Toast.fire({ icon: 'warning', title: 'Please fill all required fields' });
+            return;
+        }
         var tenantData = {
             TenantId: $('#TenantId').val(),
             FirstName: $('#FirstName').val(),
@@ -157,6 +219,13 @@
             Account_Swift: $('#Account_Swift').val(),
             Account_Bank: $('#Account_Bank').val(),
             Account_Currency: $('#Account_Currency').val(),
+            Address: $('#Address').val(),
+            Address2: $('#Address2').val(),
+            Locality: $('#Locality').val(),
+            Region: $('#Region').val(),
+            PostalCode: $('#PostalCode').val(),
+            Country: $('#Country').val(),
+            Country: $('#CountryCode').val()
             AppTId: userId
           
         };
