--- a/PMS-PropertyHapa/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa/Views/Tenant/Index.cshtml
@@ -5,12 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="page-body">
-<h1>Tenants</h1>
-<a href="/Tenant/AddTenant" class="btn btn-primary mb-3">Add New Tenant</a>
+    <h1>Tenants</h1>
+    <a href="/Tenant/AddTenant" class="btn btn-primary mb-3">Add New Tenant</a>
 
-<table id="tenantsTable" class="table table-bordered table-striped">
-    <thead>
-        <tr>
+    <table id="tenantsTable" class="table table-bordered table-striped">
+        <thead>
+            <tr>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Email Address</th>
@@ -29,62 +29,70 @@
                 <th>Account Bank</th>
                 <th>Account Currency</th>
                 <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-    </tbody>
-</table>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
-        $(document).ready(function () {
-            debugger
-            var tenantId = localStorage.getItem('userId');
-            var ajaxUrl = `/Tenant/GetTenant/?tenantId=${encodeURIComponent(tenantId)}`;
+    $(document).ready(function () {
+        debugger
+        var tenantId = localStorage.getItem('userId');
+        var ajaxUrl = `/Tenant/GetTenant/?tenantId=${encodeURIComponent(tenantId)}`;
         $('#tenantsTable').DataTable({
-                "ajax": {
-                    "url": ajaxUrl,
-                    "type": "GET",
-                    "datatype": "json"
-                },
+            "ajax": {
+                "url": ajaxUrl,
+                "type": "GET",
+                "datatype": "json"
+            },
             "scroller": true,
-            "deferRender": true, 
-            "scrollY": 200, 
+            "deferRender": true,
+            "scrollY": 200,
             "scrollCollapse": true,
-                "columns": [
-             { "data": "FirstName", "width": "60%" },
-        { "data": "LastName", "width": "60%" },
-        { "data": "EmailAddress", "width": "60%" },
-        { "data": "PhoneNumber", "width": "60%" },
-        { "data": "EmergencyContactInfo", "width": "60%" },
-        { "data": "LeaseAgreementId", "width": "60%" },
-        { "data": "TenantNationality", "width": "60%" },
-        { "data": "Gender", "width": "60%" },
-        { "data": "DOB", "width": "60%" },
-        { "data": "VAT", "width": "60%" },
-        { "data": "LegalName", "width": "60%" },
-        { "data": "Account_Name", "width": "60%" },
-        { "data": "Account_Holder", "width": "60%" },
-        { "data": "Account_IBAN", "width": "60%" },
-        { "data": "Account_Swift", "width": "60%" },
-        { "data": "Account_Bank", "width": "60%" },
-        { "data": "Account_Currency", "width": "60%" },
-                {
+            "columns": [
+                { "data": "FirstName", "width": "60%" },
+                { "data": "LastName", "width": "60%" },
+                { "data": "EmailAddress", "width": "60%" },
+                { "data": "PhoneNumber", "width": "60%" },
+                { "data": "EmergencyContactInfo", "width": "60%" },
+                { "data": "LeaseAgreementId", "width": "60%" },
+                { "data": "TenantNationality", "width": "60%" },
+                { "data": "Gender", "width": "60%" },
+                { "data": "DOB", "width": "60%" },
+                { "data": "VAT", "width": "60%" },
+                { "data": "LegalName", "width": "60%" },
+                { "data": "Account_Name", "width": "60%" },
+                { "data": "Account_Holder", "width": "60%" },
+                { "data": "Account_IBAN", "width": "60%" },
+                { "data": "Account_Swift", "width": "60%" },
+                { "data": "Account_Bank", "width": "60%" },
+                { "data": "Account_Currency", "width": "60%" },
+                { "data": "Address", "width": "60%" },
+                { "data": "Address2", "width": "60%" },
+                { "data": "Locality", "width": "60%" },
+                { "data": "Region", "width": "60%" },
+                { "data": "PostalCode", "width": "60%" },
+                { "data": "Country", "width": "60%" },
+                { "data": "CountryCode", "width": "60%" },
+
+                    {
                     "data": "tenantId",
                     "render": function (data, type, row) {
                         return `<button onclick="editTenant(${row.TenantId})" class="btn btn-success edit-tenant">Edit</button>
-                <button data-tenant-id="${row.TenantId}" class="btn btn-danger delete-tenant">Delete</button>`;
+                    <button data-tenant-id="${row.TenantId}" class="btn btn-danger delete-tenant">Delete</button>`;
                     },
 
                     "orderable": false
                 }
 
-                ],
-                "language": {
-                    "emptyTable": "No data found, Please click on <b>Add New</b> Button"
-                }
-            });
+            ],
+            "language": {
+                "emptyTable": "No data found, Please click on <b>Add New</b> Button"
+            }
         });
+    });
 
 
     function updateTenant(tenantId) {
