--- a/PMS-PropertyHapa/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa/Views/Tenant/Index.cshtml
@@ -28,6 +28,13 @@
                 <th>Account Swift</th>
                 <th>Account Bank</th>
                 <th>Account Currency</th>
+                <th>Address</th>
+                <th>Address2</th>
+                <th>Locality</th>
+                <th>Region</th>
+                <th>Postal Code</th>
+                <th>Country</th>
+                <th>Country Code z</th>
                 <th>Actions</th>
             </tr>
         </thead>
