--- a/PMS-PropertyHapa/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa/Views/Tenant/Index.cshtml
@@ -4,48 +4,54 @@
     ViewData["Title"] = "Tenants";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+
+
 <div class="page-body">
     <h1>Tenants</h1>
-    <a href="/Tenant/AddTenant" class="btn btn-primary mb-3">Add New Tenant</a>
+    <a href="/Tenant/AddTenant" class="btn btn-success mb-3">Add New Tenant</a>
 
-    <table id="tenantsTable" class="table table-bordered table-striped">
-        <thead>
-            <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email Address</th>
-                <th>Phone Number</th>
-                <th>Emergency Contact Info</th>
-                <th>Lease Agreement Id</th>
-                <th>Tenant Nationality</th>
-                <th>Gender</th>
-                <th>DOB</th>
-                <th>VAT</th>
-                <th>Legal Name</th>
-                <th>Account Name</th>
-                <th>Account Holder</th>
-                <th>Account IBAN</th>
-                <th>Account Swift</th>
-                <th>Account Bank</th>
-                <th>Account Currency</th>
-                <th>Address</th>
-                <th>Address2</th>
-                <th>Locality</th>
-                <th>Region</th>
-                <th>Postal Code</th>
-                <th>Country</th>
-                <th>Country Code z</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table id="tenantsTable" class="table table-bordered table-striped">
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email Address</th>
+                    <th>Phone Number</th>
+                    <th>Emergency Contact Info</th>
+                    <th>Lease Agreement Id</th>
+                    <th>Tenant Nationality</th>
+                    <th>Gender</th>
+                    <th>DOB</th>
+                    <th>VAT</th>
+                    <th>Legal Name</th>
+                    <th>Account Name</th>
+                    <th>Account Holder</th>
+                    <th>Account IBAN</th>
+                    <th>Account Swift</th>
+                    <th>Account Bank</th>
+                    <th>Account Currency</th>
+                    <th>Address</th>
+                    <th>Address2</th>
+                    <th>Locality</th>
+                    <th>Region</th>
+                    <th>Postal Code</th>
+                    <th>Country</th>
+                    <th>Country Code</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 <script>
     $(document).ready(function () {
-        debugger
         var tenantId = localStorage.getItem('userId');
         var ajaxUrl = `/Tenant/GetTenant/?tenantId=${encodeURIComponent(tenantId)}`;
         $('#tenantsTable').DataTable({
@@ -54,10 +60,7 @@
                 "type": "GET",
                 "datatype": "json"
             },
-            "scroller": true,
             "deferRender": true,
-            "scrollY": 200,
-            "scrollCollapse": true,
             "columns": [
                 { "data": "FirstName", "width": "60%" },
                 { "data": "LastName", "width": "60%" },
@@ -83,24 +86,27 @@
                 { "data": "PostalCode", "width": "60%" },
                 { "data": "Country", "width": "60%" },
                 { "data": "CountryCode", "width": "60%" },
-
-                    {
+                {
                     "data": "tenantId",
                     "render": function (data, type, row) {
-                        return `<button onclick="editTenant(${row.TenantId})" class="btn btn-success edit-tenant">Edit</button>
-                    <button data-tenant-id="${row.TenantId}" class="btn btn-danger delete-tenant">Delete</button>`;
+                        return `<div class="btn-container">
+                                        <button onclick="editTenant(${row.TenantId})" class="btn btn-sm btn-success edit-tenant">Edit</button>
+                                            <button data-tenant-id="${row.TenantId}" class="btn btn-sm btn-danger  delete-tenant">Delete</button>
+                                </div>`;
                     },
-
                     "orderable": false
                 }
-
             ],
             "language": {
                 "emptyTable": "No data found, Please click on <b>Add New</b> Button"
-            }
+            },
+            "initComplete": function () {
+
+                $('#tenantsTable thead th').css("min-width", "100px");
+            },
+            "order": [] 
         });
     });
-
 
     function updateTenant(tenantId) {
         window.location.href = `/Tenant/AddTenant?tenantId=${tenantId}`;
@@ -110,6 +116,7 @@
         var tenantId = $(this).data('tenant-id');
         deleteTenant(tenantId);
     });
+
 </script>
 <script>
 
