--- a/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
@@ -3,6 +3,10 @@
     ViewData["Title"] = "Login";
     Layout = "~/Views/Shared/_IdentityLayout.cshtml";
 }
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+
 <form class="theme-form login-form needs-validation" novalidate="" asp-action="Login" method="post">
     <h3>Admin Login</h3>
     <h4>Welcome back Admin! Log in to your account.</h4>
@@ -19,13 +23,13 @@
         <div class="input-group">
             <span class="input-group-text"><i class="icon-lock"></i></span>
             <input id="Password" name="Password" type="password" class="form-control" placeholder="Password..." required="" />
-            <div class="show-hide"><span class="show"></span></div>
+            <div class="show-hide" style="cursor: pointer;"><i class="bi bi-eye"></i></div>
         </div>
     </div>
     <div class="form-group">
         <div class="icheck-primary">
             <input type="checkbox" id="remember" asp-for="Remember">
-            <label class="text-muted"  for="remember" style="color:black!important">
+            <label class="text-muted" for="remember" style="color:black!important">
                 Remember Me
             </label>
         </div>
@@ -35,3 +39,37 @@
     </div>
     <p>Don't have an account?<a class="ms-2" href="/Account/Registration">Create Account</a></p>
 </form>
+
+
+
+<script>
+    $(function () {
+        $('.show-hide').click(function () {
+            var $passwordField = $('#Password');
+            var fieldType = $passwordField.attr('type');
+
+            if (fieldType === 'password') {
+                $passwordField.attr('type', 'text');
+                $('.show-hide i').removeClass('bi-eye').addClass('bi-eye-slash');
+            } else {
+                $passwordField.attr('type', 'password');
+                $('.show-hide i').removeClass('bi-eye-slash').addClass('bi-eye');
+            }
+        });
+
+        // Function to clear email field on login failure
+        function clearEmailField() {
+            $('#Email').val('');
+        }
+
+     
+        $('.login-form').on('submit', function (e) {
+            var loginSuccess = true;
+
+            if (!loginSuccess) {
+                e.preventDefault(); 
+                clearEmailField();
+            }
+        });
+    });
+</script>
