--- a/PMS-PropertyHapa/Views/Auth/Login.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/Login.cshtml
@@ -6,8 +6,14 @@
 
 @section Scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="path/to/bootstrap-icons.css" rel="stylesheet">
+
+
     <script>
         $(function () {
+            var $emailField = $('#Email');
+
             $('.login-form').on('submit', function (e) {
                 e.preventDefault();
                 var formData = new FormData(this);
@@ -20,8 +26,7 @@
                     contentType: false,
                     success: function (response) {
                         if (response.success) {
-                            debugger
-                            localStorage.setItem('userId', response.result.userId); 
+                            localStorage.setItem('userId', response.result.userId);
                             localStorage.setItem('userName', response.result.userName);
                             if (response.result.organizationName) {
                                 localStorage.setItem('organizationName', response.result.organizationName);
@@ -40,10 +45,11 @@
                             }
                             var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
                             Toast.fire({ icon: 'success', title: response.message });
-                            window.location.href = "/Home/Index"; 
+                            window.location.href = "/Home/Index";
                         } else {
                             var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
                             Toast.fire({ icon: 'error', title: response.message });
+                            $emailField.val(formData.get('Email'));
                         }
                     },
                     error: function (xhr, status, error) {
@@ -53,10 +59,26 @@
                     }
                 });
             });
-        });
 
+            $('.show-hide').click(function () {
+                var $passwordField = $('#Password');
+                var fieldType = $passwordField.attr('type');
+
+                if (fieldType === 'password') {
+                    $passwordField.attr('type', 'text');
+                    $('.show-hide i').removeClass('bi-eye').addClass('bi-eye-slash');
+                } else {
+                    $passwordField.attr('type', 'password');
+                    $('.show-hide i').removeClass('bi-eye-slash').addClass('bi-eye');
+                }
+            });
+        });
     </script>
 }
+
+
+
+
 
 <form class="theme-form login-form needs-validation" novalidate="" method="post">
     <h4>Login</h4>
@@ -74,9 +96,11 @@
         <div class="input-group">
             <span class="input-group-text"><i class="icon-lock"></i></span>
             <input id="Password" name="Password" type="password" class="form-control" placeholder="Password..." required="" />
-            <div class="show-hide"><span class="show"></span></div>
+            <div class="show-hide" style="cursor: pointer;"><i class="bi bi-eye"></i></div>
+
         </div>
     </div>
+
     <div class="form-group">
         <div class="icheck-primary">
             <input type="checkbox" id="remember" asp-for="Remember">
